[package]
name = "inbox"
version = "0.0.1"
edition = "2021"
authors = ["abinash s. <nocoffeecraft@gmail.com>"]
license = "MIT"
description = "An email client for terminal nerds"
readme = "README.md"
homepage = "https://github.com/fnabinash/inbox"
repository = "https://github.com/fnabinash/inbox"
documentation = "https://docs.rs/inbox"
keywords = ["email", "terminal", "cli"]
categories = ["command-line-utilities", "email"]
rust-version = "1.70.0"
exclude = [
    "assets/*",
    ".github/*"
]

[dependencies]
