[package]
name = "inbox"
version = "0.0.1"
edition = "2021"
authors = ["abinash s. <nocoffeecraft@gmail.com>"]
license = "MIT"
description = "An email client for terminal nerds"
readme = "README.md"
homepage = "https://github.com/nocoffeecraft/inbox"
repository = "https://github.com/nocoffeecraft/inbox"
documentation = "https://docs.rs/inbox"
keywords = ["email", "terminal", "cli"]
categories = ["command-line-utilities", "email"]
rust-version = "1.70.0"
exclude = [
    "assets/*",
    ".github/*"
]

[dependencies]
anyhow = "1.0.94"
lettre = "0.11.10"
